# trifecta

./: README.md
blueprint/: README.md  bun.lockb  hdfc.eml  index.ts  mail.ts  package.json
db/: Cargo.toml
db/paillier_rs/: Cargo.toml
db/paillier_rs/src/: arithmetic.rs  decrypt.rs  encrypt.rs  keygen.rs  lib.rs  main.rs
db/program/: Cargo.toml  fibonacci-program
db/program/sql/: add  compare  decrypt  encrypt  fibonacci-program  scaladd
db/program/src/: main.rs
db/script/: Cargo.toml  fibonacci-program  wallets.db
db/script/src/: dbhandler.rs  lib.rs  main.rs
fe/: package-lock.json  package.json  tsconfig.json
fe/src/app/: page.tsx
fe/src/app/api/sendInvoice/: route.ts
